# hot_days

./: .gitignore  LICENSE  README.md  blog_post.md  blog_post_zenn.md  pyproject.toml
data/interim/: annual_hot_days.csv  annual_hot_days.parquet
data/processed/: hot_days_long.csv  hot_days_long.parquet  national_annual_trend.csv  stations.csv  summary_by_prefecture.csv  summary_by_station.csv  summary_by_station_with_coords.csv
data/raw/pref/: prefecture_11.html  prefecture_12.html  prefecture_13.html  prefecture_14.html  prefecture_15.html  prefecture_16.html  prefecture_17.html  prefecture_18.html  prefecture_19.html  prefecture_20.html  prefecture_21.html  prefecture_22.html  prefecture_23.html  prefecture_24.html  prefecture_31.html  prefecture_32.html  prefecture_33.html  prefecture_34.html  prefecture_35.html  prefecture_36.html  prefecture_40.html  prefecture_41.html  prefecture_42.html  prefecture_43.html  prefecture_45.html  prefecture_46.html  prefecture_48.html  prefecture_49.html  prefecture_50.html  prefecture_51.html  prefecture_52.html  prefecture_53.html  prefecture_54.html  prefecture_55.html  prefecture_56.html  prefecture_57.html  prefecture_60.html  (+23 more)
pages/: README.md  index.html
reports/: hot_days_map.html  hot_days_report.md
src/jma_hot_days/: __init__.py  aggregate.py  annual.py  cli.py  coords.py  fetch.py  report.py  stations.py
temp/probe/: amedas_豐灘ｽ｢_a1.html  amedas_豐灘ｽ｢_a3.html  amedas_豐灘ｽ｢_default.html  kumagaya_a1.html  kumagaya_a2.html  kumagaya_a3.html  kumagaya_a4.html  kumagaya_a5.html  kumagaya_a6.html  kumagaya_p1s.html
(+1678 files in other folders)
