[project]
name = "jma-hot-days"
version = "0.1.0"
description = "Annual count of extremely hot days (max temp >= 35C) at all JMA observation stations, last 10 years."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "tenacity>=9.0",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "folium>=0.17",
    "tabulate>=0.9",
]

[project.scripts]
jma-hot-days = "jma_hot_days.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jma_hot_days"]

[tool.ruff]
line-length = 100
target-version = "py311"
